# n-search-ops

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  project.md  pyproject.toml  render.yaml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 20260528_001_initial_schema.py
app/: main.py
app/admin/: auth.py
app/admin/routes/: accounts.py  assignments.py  auth.py  dashboard.py  groups.py  keywords.py  logs.py  testers.py
app/api/: dependencies.py
app/api/routes/: app_api.py  health.py
app/core/: config.py  logging.py  security.py  time.py
app/db/: base.py  models.py  seed.py  session.py
app/schemas/: api.py
app/services/: admin_service.py  assignment_service.py  auth_service.py  csv_service.py  search_service.py  stats_service.py
app/static/: app.css
app/templates/: base.html
app/templates/admin/: accounts.html  assignments.html  dashboard.html  groups.html  keywords.html  layout.html  login.html  logs.html  testers.html
scripts/: seed_demo.py  smoke_test.py
specs/001-naver-search-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  helpers.py  test_database_url_normalization.py
tests/contract/: test_app_api.py
tests/integration/: test_admin_management.py  test_reporting.py  test_search_service.py
(+2 files in other folders)
